feat: Allow to change postgres version/extensions/config at any time and have the operator perform the rollout